@@ -1,3 +1,9 @@
+2012-02-21  Albert Chu <chu11@llnl.gov>
+
+	* doc/freeipmi-bugs-issues-and-workarounds.txt,
+	man/ipmi-sensors.8.pre.in: Update information concerning
+	'discretereading' workaround.
+	
 2012-02-17  Albert Chu <chu11@llnl.gov>
 
 	* ipmipower/: Various code cleanup.  Change "DIAG_INTR" to
